mule-user-guide/v/3.2/xml-to-object-transformer-reference.adoc
= XML-to-Object Transformer Reference

Use a XML-to-Object transformer to transform XML data to a Java Object (also referred to as Java Bean graphs) using XStream.

*Minimum Configuration:* The name of the XStream driver class.

A XML-to-Object transformer transforms XML data using the specified XStream driver class.

Important: Mule uses XStream 1.4.2. The XML-to-object transformer is vulnerable to CVE-2013-7285. A remote attacker can send messages to an XML-to-object transformer and can achieve remote code execution (RCE). For more information, contact http://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Customer Support].

In addition to the properties common to all transformers, you can also specify class aliases and converters.

Use the General tab to specify or browse to the XStream driver class. 
+
image:xml-to-object1.png[xml-to-object1]
+
Use the Advanced tab to optionally configure the properties standard to all transformers, plus add or change class aliases and class converters. 
+
image:xml-to-object2.png[xml-to-object2]
+
Use the Aliases pane to create, edit, or delete aliases for specific classes. Similarly, use the Converters pane to create, edit, or delete class converters.

== See Also

For more information, see link:https://docs.mulesoft.com/mule-user-guide/v/3.2/xmlobject-transformers[here].
