mule-user-guide/v/3.8/xml-to-object-transformer-reference.adoc
= XML to Object Transformer Reference
:keywords: anypoint studio, esb, transformers

You can use an XML to Object transformer to transform XML data to a Java Object (also referred to as Java Bean graphs) using XStream.

Minimum Configuration: The name of the XStream driver class.

An XML-to-Object transformer transforms XML data using the specified XStream driver class.

*Important*: Mule uses XStream 1.4.2. The XML-to-object transformer is vulnerable to link:http://www.securityfocus.com/bid/64760[CVE-2013-7285]. A remote attacker can send messages to an XML to Object transformer and can achieve remote code execution (RCE). For more information, contact link:http://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Customer Support.]   

In addition to the properties common to all transformers, you can also specify class aliases and converters.

== Configuring XML to Object

*Tabs*:

* *General* -  Specify or browse to the XStream driver class:
+
image:XML2Object.png[XML2Object]

* *Advanced* - Optionally configure the properties standard to all transformers, plus add or change class aliases and class converters.
+
image:XML2ObjectAdv.png[XML2ObjectAdv]

** Use the *Aliases* pane to create, edit, or delete aliases for specific classes. 
** Use the *Converters* pane to create, edit, or delete class converters.

== Code Example

The following example converts XML to Object passed to Groovy for processing. The results are logged.

image:xml-to-object-ref.png[xml-to-object-ref.png]

[source,xml,linenums]
----
include::_sources/xml-to-object-transformer-reference.xml[]
----

== See Also

* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
